--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,8 +283,10 @@ footer a {
 
 @media screen and (min-width: 1440px) {
     body {
+        margin: 0 auto;
         font-size: 130%;
         line-height: 30px;
+        width: 75%;
     }
     .two-col-main {
         grid-template-columns: 290px 1fr;
