--- a/styles/reference.css
+++ b/styles/reference.css
@@ -7,7 +7,7 @@ body {
     width: 425px;
     font-size: 13px;
     color: black;
-    background-color: #506c64;
+    background-color: #b7cece;
     list-style-type: none;
 }
 h1 {
@@ -20,13 +20,15 @@ footer {
     margin-top: 100px;
     font-size: 10px;
     padding-top: 13px;
-    height: 38px;
+    padding-bottom: 13px;
+    height: 42px;
     text-align: center;
     background-color: #4c3957;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 footer a {
+    font-size: 14px;
     color: #4c3957;
     text-decoration: none;
     background-color: #F1CC47;
