--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,12 +6,13 @@ body {
     font-size: 100%;
     color: #fff;
     line-height: 20px;
+    width: 100%;
 }
 
 .header {
-    color: #B7CECE;
+    color: #2B1512;
     height: fit-content;
-    background-color: #4c3957;
+    background-color: #a38ab16b;
     border-bottom: 2px solid #2B1512;
 }
 .header h1 {
@@ -23,12 +24,10 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
-    margin-left: 10px;
 }
 
 
 .two-col-side {
-    
     display: grid;
     gap: 5px;
     grid-template-columns: 1fr 250px;
@@ -39,13 +38,13 @@ body {
     margin: 80px 0px 0px 20px;
     width: 10em;
     height: 10em;
-    background-color: #F1CC47;
-    border: 1px solid black;
+    background-color: #f1d469;
+    border: 1px solid #2B1512;
     border-radius: 10px;
 }
 
 .hero-rate h4{
-    color: #823329;
+    color: #2B1512;
     font-size: 35px;
     text-align: center;
     margin-top: 30%;
@@ -63,22 +62,23 @@ body {
 }
 
 .sidebar {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
     color: #2B1512;
     padding: 5px;
-    height: 100%;
-    background-color: #506c64;
+    background-color: #b7cece;
 }
 
 .personal-info {
     color: #2B1512;
-    background-color: #747986;
+    background-color: #979ba7;
     border-radius: 7px;
     height: 4em;
     width: 195px;
     display: grid;
     grid-template-columns: 15% 1fr 1fr;
     margin: 5px;
-    box-shadow: 1px 1px 1px 1px #74A8A7;
+    box-shadow: 1px 1px 1px 1px #212b2a;
     
 }
 
@@ -91,7 +91,11 @@ body {
     font-size: 12px;
 }
 .personal-info img {
-    border-radius: 25%;
+    padding: 2px;
+    background-color: #b7cece;
+    box-shadow: 1px 2px 2px 2px #212b2a90;
+    border: 2px solid rgb(62, 57, 49);
+    border-radius: 70%;
     margin-top: 10px;
     margin-left: 5px;
     width: 2em;
@@ -111,15 +115,14 @@ body {
     background-color:#747986;
     padding: 10px;
     margin-right: 5px;
-    /* border: 1px solid #2B1512; */
     border-radius: 15px;
     box-shadow: 3px 3px 3px 3px #74a8a782;
 }
 
 .performance img, .customization img {
     width: 100px;
-    margin: 100px 0px 0px 5px;
     border-radius: 5px;
+    margin-left: 10px;
 }
 
 .pricing {
@@ -141,6 +144,11 @@ body {
 .pricing h3 {
     text-align: center;
     margin: 0 0 0 20px;
+}
+
+.three-row {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 .customization {
     width: 98%;
@@ -178,14 +186,22 @@ body {
     text-align: center;
 }
 .pro-con {
-    width: 60%;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    width: 100%;
+    line-height: 20px; 
+    margin-top: 20px;
+}
+
+.tbl-procon {
+    background-color: #979ba7;
+    height: fit-content;
     padding: 10px;
-    line-height: 20px;
-    background-color:#747986;
-    margin: 20px 5px 5px 40px;
-    /* border: 1px solid #2B1512; */
     border-radius: 15px;
-    box-shadow: 1px 1px 1px 1px #74a8a782;
+
+}
+.tbl-procon h3 {
+    margin: 0;
 }
 .pro-con li {
     list-style-type: none;
@@ -211,16 +227,21 @@ body {
 }
 
 table {
-    width: 200px;
-    margin: 40px 10px 10px 0px;
+    width: 10px;
+    margin: 40px 0px 0px 0px;
     border-collapse: collapse;
+    font-size: 80%;
 }
 table, th, td {
     border: 1px solid black;
 }
 th, td {
-    padding: 8px 12px;
+    padding: 5px 5px;
     text-align: left;
+}
+
+.rate-table {
+    margin-left: 20px;
 }
 footer {
     padding-top: 10px;
@@ -275,9 +296,6 @@ footer a {
     }
     .pricing table {
         margin-left: 60px;
-    }
-    .pro-con {
-        width: 80%;
     }
 }
 
