--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,13 @@ body {
     line-height: 20px;
     width: 100%;
     background-color: #8ab19b6b;
+    font-family: 'Crimson Text', serif;
+    font-weight: 400;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
 }
 
 .header {
@@ -77,7 +84,7 @@ body {
     height: 4em;
     width: 195px;
     display: grid;
-    grid-template-columns: 15% 1fr 1fr;
+    grid-template-columns: 2em 1fr 1fr;
     margin: 5px;
     box-shadow: 1px 1px 1px 1px #212b2a;
     margin-left: 5%;
@@ -86,11 +93,13 @@ body {
 
 .personal-info h2 {
     font-size: 16px;
-    margin: 15px 14px;   
+    /* margin: 15px 14px;    */
+    margin-left: 15px;
+    margin-top: 15px;
 }
 .personal-info p {
     margin-top: 35px;
-    font-size: 12px;
+    font-size: 75%;
 }
 .personal-info img {
     padding: 2px;
@@ -325,6 +334,10 @@ footer a {
     footer {
         padding-top: 20px;
     }
+    .personal-info p {
+        font-size: 13px;
+        line-height: 14px;
+    }
     .three-row {
         display: block;
     }
@@ -343,7 +356,7 @@ footer a {
     }
 
     .performance img, .customization img {
-        width: 200px;
+        width: 270px;
         margin: 100px 0px 0px 100px;
         border-radius: 5px;
     }
@@ -364,10 +377,25 @@ footer a {
     .two-col-main {
         grid-template-columns: 290px 1fr;
     }
-    
-
+    .pricing {
+        height: 60vh;
+    }
+    .personal-info p { 
+        line-height: 15px;
+        font-size: 13px;
+        margin-left: 3px;
+        margin-top: 30px;
+        margin-right: 5px;
+    }
     footer {
         height: 7vh;
+    }
+    .cite {
+        top: 120px;
+        font-size: 12px;
+    }
+    .performance img, .customization img {
+        width: 350px;
     }
 }
 
